# quantfox

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: HANDOFF-2026-07-10.md  akshare-interfaces.md  lesson.md  quant-fund-selection-methodology.md  skill-improvements.md  task.md
docs/reference/: trustworthy-decision-core.md
money/: cli.py  config.py  evidence.py  indicators.py  metrics.py  percentile.py  report.py  storage.py
money/data/: news.py  prices.py
quantfox/: backtest.py  calendar_cn.py  cli.py  config.py  evidence.py  forecast.py  gold_report.py  gold_report_render.py  health.py  indicators.py  intraday.py  mandate.py  market.py  metrics_batch.py  monitor.py  notify.py  patrol.py  report.py  schedule_mac.py  screen.py  screen_report.py  storage.py  themes.py
scripts/: probe_akshare.py  probe_fund_pro.py
tests/: test_alerts_issues.py  test_backtest.py  test_calendar.py  test_cli.py  test_config.py  test_events_cn.py  test_evidence.py  test_forecast.py  test_framework.py  test_fund_profile.py  test_gold_render.py  test_gold_report.py  test_health.py  test_indicators.py  test_intraday.py  test_lots.py  test_mandate.py  test_market.py  test_metrics.py  test_metrics_batch.py  test_monitor.py  test_news.py  test_next_confirm.py  test_notify.py  test_patrol.py  test_percentile.py  test_prices.py  test_reconcile.py  test_report.py  test_resolve.py  test_schedule_mac.py  test_screen.py  test_simulate.py  test_skill_file.py  test_smoke.py  test_storage.py  test_themes.py  test_valuation.py  test_watch_cli.py
(+39 files in other folders)
