[project]
name = "money-quant"
version = "0.1.0"
description = "场外基金与黄金的量化证据卡 + Claude 决策助手"
requires-python = ">=3.12,<3.13"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pandas>=2.2",
  "akshare>=1.14",
]

[project.scripts]
money = "money.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["money"]
